Fix selected filter tags from overflowing

--- a/search-parts/src/components/filters/FilterSearchBoxComponent.module.scss
+++ b/search-parts/src/components/filters/FilterSearchBoxComponent.module.scss
@@ -14,6 +14,7 @@
     padding-left: 5px;
     border-radius: 12px;
     margin-bottom: 6px;
+    max-width: 100%;
 
     .tagItemText {
         overflow: hidden;
